--- a/Frontend/frontend-client/src/app/navbar/navbar.component.html
+++ b/Frontend/frontend-client/src/app/navbar/navbar.component.html
@@ -2,5 +2,7 @@
   <span>Neptun--&trade;</span>
   <button mat-button routerLink="">Tantargyak</button>
   <button mat-button routerLink="my-messages">Uzenetek</button>
+  <button mat-button routerLink="create-user">Uj felhasznalo</button>
+  <button mat-button routerLink="login">Bejelentkezés</button>
 
 </mat-toolbar>
