Saját kurzusok listázása, normális radio tantárgyakra

--- a/Frontend/frontend-client/src/app/navbar/navbar.component.html
+++ b/Frontend/frontend-client/src/app/navbar/navbar.component.html
@@ -1,8 +1,9 @@
 <mat-toolbar>
-  <span>Neptun--&trade;</span>
-  <button mat-button routerLink="">Tantargyak</button>
-  <button mat-button routerLink="my-messages">Uzenetek</button>
-  <button mat-button routerLink="create-user">Uj felhasznalo</button>
-  <button mat-button routerLink="login">Bejelentkezés</button>
-
+      <span>Neptun--&trade;</span>
+      <div ><button mat-stroked-button	 routerLink="">Tantárgyak</button></div>
+      <div ><button mat-stroked-button	 routerLink="my-courses">Felvett kurzusok</button></div>
+      <div ><button mat-stroked-button	 routerLink="my-messages">Üzenetek</button></div>
+      <div ><button mat-stroked-button	 routerLink="create-user">Új felhasználó</button></div>
+      <div ><button mat-stroked-button	 routerLink="login">Bejelentkezés</button></div>
+  
 </mat-toolbar>
