Backend - Frontend összekötés (félig)

--- a/Frontend/frontend-client/src/app/login-page/login-page.component.html
+++ b/Frontend/frontend-client/src/app/login-page/login-page.component.html
@@ -1,5 +1,5 @@
 <!--       _
-       .__(.)< (MEOW)
+       .__(.)< (STOP SOROS)
         \___)   
  ~~~~~~~~~~~~~~~~~~-->
 <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
