--- a/Frontend/frontend-client/src/app/subject-list-page/subject-list-page.component.html
+++ b/Frontend/frontend-client/src/app/subject-list-page/subject-list-page.component.html
@@ -25,14 +25,14 @@
           </mat-panel-title>
         </mat-expansion-panel-header>
           <mat-radio-group >
-              <mat-radio-button *ngFor="let course of subject.courses" [value]="course.id">
+              <mat-radio-button *ngFor="let course of subject.courses" [value]="course.id" (click)="setCourse(subject.id, course.id)">
                   <label>Hallgatók száma/limit: {{ course.studentCount }} / {{course.studentLimit}} <br>
                       Oktató neve: {{course.teacher.name}} 
                   </label>
               </mat-radio-button>
           </mat-radio-group>
         <mat-action-row>
-            <button  mat-button type="submit" >Tárgy felvétele </button>
+            <button  mat-button type="submit" (click)="register()" >Tárgy felvétele </button>
         </mat-action-row>
     </mat-expansion-panel>
 <mat-accordion>
